--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,6 +50,8 @@
         android:id="@+id/buttonAddExpense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:minHeight="72dp"
         android:paddingVertical="12dp"
         android:text="@string/button_add_expense"
@@ -61,6 +63,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:minHeight="64dp"
         android:paddingVertical="8dp"
         android:text="@string/button_view_spend"
