--- a/app/src/main/res/layout/activity_view_spend.xml
+++ b/app/src/main/res/layout/activity_view_spend.xml
@@ -124,6 +124,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:minHeight="64dp"
         android:text="@string/button_export_csv"
